# pruning

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  branch-length.ipynb  cellcoal-runner-matpat.py  cellphy-runner.sh  combine_csvs.py  convert.py  distance_functions.py  gen-scripts.sh  gen-scripts2.sh  matrices.py  nex-to-phy.py  phangorn.r  phangorn5.r  pruning.py  pruningv2.py  pruningv3.py  pyproject.toml  pyrightconfig.json  q-matrices.ipynb  seq-gen.r  tree-stats-boost-final_rp_norm.R  tree-stats-boost-p1.R  tree-stats-boost.R  tree-stats-raxml.R  tree-stats.R  tree-viz.R
data/diploid-sites-1000-seq-err-0.00-ado-0.00/: cellphy-model-fit.csv  combined-fit-stats-reconstructed-tree-4state.csv  combined-fit-stats-reconstructed-tree-cellphy.csv  combined-fit-stats-reconstructed-tree-gtr10.csv  combined-fit-stats-reconstructed-tree-gtr10z.csv  combined-fit-stats-reconstructed-tree-half-nested.csv  combined-fit-stats-reconstructed-tree-nested-final_rp_norm.csv  combined-fit-stats-reconstructed-tree-nested-p1.csv  combined-fit-stats-reconstructed-tree-nested.csv  combined-fit-stats-reconstructed-tree-phased16.csv  combined-fit-stats-reconstructed-tree-phased16mp.csv  combined-fit-stats-reconstructed-tree-unphased.csv
data/diploid-sites-10000-seq-err-0.00-ado-0.00/: cellphy-model-fit.csv  combined-fit-stats-reconstructed-tree-4state.csv  combined-fit-stats-reconstructed-tree-cellphy.csv  combined-fit-stats-reconstructed-tree-gtr10.csv  combined-fit-stats-reconstructed-tree-gtr10z.csv  combined-fit-stats-reconstructed-tree-half-nested.csv  combined-fit-stats-reconstructed-tree-nested-final_rp_norm.csv  combined-fit-stats-reconstructed-tree-nested.csv  combined-fit-stats-reconstructed-tree-phased16.csv  combined-fit-stats-reconstructed-tree-phased16mp.csv  combined-fit-stats-reconstructed-tree-unphased.csv
math/: branch-length.ipynb
scripts/: README.md  cellcoal-runner-matpat-existing-trees.py  cellcoal-runner-matpat.py  combine_csvs.py  gen-matrices-nested.py  gen-matrices.py  gen-matrices.sh  gen-scripts.sh  model-comp-figure.ipynb  model-param-comp-figure.ipynb  run-10-models-ssh-helper.sh  run-10-models-ssh.sh  run-16-model-ssh-helper.sh  run-16-models-ssh.sh  run-164-models-ssh-helper.sh  run-164-models-ssh.sh  run-164frp-models-ssh-helper.sh  run-164frp-models-ssh.sh  run-all-models-halfnested.sh  run-all-models-indep-16.sh  run-all-models-indep.sh  run-all-models-nested.sh  run-raxml.sh  scrape-cellphy-log.py  strip-branch-lens.py  tree-stats-before.R  tree-stats-boost.R  tree-stats-raxml.R  tree-stats.R
src/pruning/: __init__.py  distance_functions.py  fit.py  halfstack.py  initialization.py  matrices.py  objective_functions.py  output.py  path_constraints.py  pruning.py  pruning_cpp.pyi  pruningv3.py  read_sequences.py  score_function_gen.py  stack.py  util.py
src/pruning_cpp/: bindings.cpp  felsenstein.cpp  felsenstein.hpp  util.hpp
test/: test-diploid.nwk  test-diploid.phy  test.nwk  test.phy  test.tre  test_1.phy
test-data/: test_100K.phy
