[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pruning"
dynamic = ["version"]
authors = [
    { name = "Adam C Knapp", email = "adam.knapp@medicine.ufl.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
    "ete3",
]

[project.scripts]
pruning = "pruning:main_cli"
pruning_stack = "pruning.stack:main_cli"
pruning_halfstack = "pruning.halfstack:main_cli"


[project.urls]
Homepage = "https://github.com/knappa/pruning"
Issues = "https://github.com/knappa/pruning"